<resources>

    <string name="app_name">Playlist Maker</string>
    <string name="searchString">Поиск</string>
    <string name="MediaLibraryString">Медиатека</string>
    <string name="SettingsString">Настройки</string>
    <string name="BlackTheme">Темная тема</string>
    <string name="Share">Поделиться приложением</string>
    <string name="Support">Написать в поддержку</string>
    <string name="Agreement">Пользовательское соглашение</string>
    <string name="PractAdr">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="ShareText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myemail">nikolas14@mail.ru</string>
    <string name="AgreementURL">https://yandex.ru/legal/practicum_offer/</string>
    <string name="searchHint">Поиск</string>
    <string name="NothingFound">Ничего не нашлось</string>
    <string name="LoadingProblemText">Проблемы со связью \n \n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="RefreshText">Обновить</string>
    <string name="youSearchedText">Вы искали</string>
    <string name="clearHistoryButton">Очистить историю</string>
    <string name="track_name">Track name long long long long size</string>
    <string name="artist_name">Artist name</string>
    <string name="uncknowncountry">UncknownCountry</string>
    <string name="uncknowngenre">UncknownGenre</string>
    <string name="uncknownyear">UncknownYear</string>
    <string name="uncknownalbum">UncknownAlbum</string>
    <string name="_00_00">00:00</string>
    <string name="Country">Страна</string>
    <string name="Genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="tracktime">Длительность</string>
    <string name="url">URL</string>
    <string name="UnknownTrack">Unknown Track</string>
    <string name="emptyMedia">Ваша медиатека пуста</string>
    <string name="noplaylist">Вы не создали \n ни одного плейлиста</string>
    <string name="MediaLibrary">Медиатека</string>
    <string name="newPlaylist">Новый плейлист</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchText">Поиск</string>
    <string name="medialib">Медиатека</string>
    <string name="settingsButton">Настройки</string>
    <string name="picture">Картинка</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlistName">Название*</string>


</resources>