<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingStart="@dimen/settingsLeftMargin16dp"
    tools:context="com.example.playlistmaker.ui.settings.fragments.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settingsTopString14dp">

        <TextView
            style="@style/SettingsText"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/SettingsString"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text1" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            style="@style/SettingsText"
            android:text="@string/BlackTheme" />

        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:thumbTint="?attr/colorContainer"
            android:trackTint="?attr/colorAccent"
            android:checked="false"
            android:layout_marginEnd="12dp"
            tools:ignore="TouchTargetSizeCheck" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/ShareAppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsText"
            android:text="@string/Share" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/share"
            app:tint="?attr/color" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/WriteSupportText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsText"
            android:text="@string/Support" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="14dp"
            android:src="@drawable/girl"
            app:tint="?attr/color" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/AgreementText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsText"
            android:layout_width="wrap_content"
            android:text="@string/Agreement" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="20dp"
            android:src="@drawable/go"
            app:tint="?attr/color" />

    </FrameLayout>

</LinearLayout>