<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Гидлайны-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <!--Стрелка назад-->
        <ImageView
            android:id="@+id/playerBackButtonArrow"
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSecondary" />

        <!--Обложка трека/плейсхолдер-->
        <ImageView
            android:id="@+id/trackCover"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginTop="82dp"
            android:background="@drawable/rounded_corners"
            android:src="@drawable/trackcoverplaceholder"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Имя трека-->
        <TextView
            android:id="@+id/playerTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/track_name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/trackCover" />

        <!--Имя группы-->
        <TextView
            android:id="@+id/playerArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/artist_name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/playerTrackName" />

        <!--Кнопка добавить в плэйлист-->
        <ImageButton
            android:id="@+id/playlistAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:background="@drawable/round_button"
            android:backgroundTint="?attr/colorOnSecondary"
            android:alpha="0.25"
            android:src="@drawable/playlistadd"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            app:tint="#fff" />

        <!--Кнопка плэй/пауза-->
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38.33dp"
            android:background="@drawable/round_button2"
            android:src="@drawable/play"
            app:layout_constraintEnd_toStartOf="@+id/favourites"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            app:tint="?attr/colorOnSecondary"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38.33dp"
            android:background="@drawable/round_button2"
            android:src="@drawable/pause"
            app:layout_constraintEnd_toStartOf="@+id/favourites"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            app:tint="?attr/colorOnSecondary"
            android:visibility="gone" />

        <!--Кнопка добавить в избранное-->
        <ImageButton
            android:id="@+id/favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:background="@drawable/round_button"
            android:backgroundTint="?attr/colorOnSecondary"
            android:alpha="0.25"
            android:src="@drawable/favourites"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            app:tint="#fff" />

        <!-- Продолжительность трека -->
        <TextView
            android:id="@+id/trackTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/_00_00"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_goneMarginTop="142.33dp"
            app:layout_constraintEnd_toStartOf="@+id/favourites"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <!-- Поля трека -->

        <TextView
            android:id="@+id/trackTimeName"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="75dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/tracktime"
            android:textColor="#AEAFB4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistAddButton" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/album"
            android:textColor="#AEAFB4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackTimeName" />

        <TextView
            android:id="@+id/YearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/year"
            android:textColor="#AEAFB4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumName" />

        <TextView
            android:id="@+id/genreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/Genre"
            android:textColor="#AEAFB4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/YearName" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/Country"
            android:textColor="#AEAFB4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreName" />

        <!--Значения полей-->
        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/_00_00"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/playlistAddButton" />

        <TextView
            android:id="@+id/album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/uncknownalbum"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/uncknownyear"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/uncknowngenre"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/uncknowncountry"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>