<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.search.fragments.SearchFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settingsTopString14dp"
        android:paddingStart="@dimen/settingsLeftMargin16dp">

        <TextView
            style="@style/SettingsText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/searchTextMargins"
            android:layout_marginBottom="@dimen/searchTextMargins"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/searchString"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text1" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settingsLeftMargin16dp">

        <EditText
            android:id="@+id/searchUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/searchEditTextMargins"
            android:layout_marginEnd="@dimen/searchEditTextMarginEnd"
            android:layout_marginBottom="@dimen/searchEditTextMargins"
            android:background="@drawable/edittext_rounded_corner"
            android:drawableStart="@drawable/searchinsearch"
            android:drawablePadding="@dimen/searchEditTextMagnifierSize"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/searchHint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="35"
            android:maxLines="1"
            android:minHeight="@dimen/editTextMinHeight"
            android:paddingStart="@dimen/EditTextPadding"
            android:singleLine="true"
            android:textColor="?attr/colorSecondaryVariant"
            android:textColorHint="?attr/customColorValue"
            android:textSize="@dimen/text2"
            app:drawableTint="?attr/customColorValue" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingEnd="@dimen/crossPAdding"
            android:src="@drawable/clearbutton"
            android:visibility="gone" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="140dp"
                android:indeterminateTint="#3772E7"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/searchBlock"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trackRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <ImageView
                    android:id="@+id/nothingfoundPict"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"
                    android:src="@drawable/nothingfound" />

                <ImageView
                    android:id="@+id/loadingproblem"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"
                    android:src="@drawable/loadingproblem" />

                <TextView
                    android:id="@+id/nothingfoundText"
                    style="@style/SettingsText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="246dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center"
                    android:text="@string/NothingFound"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/loadingproblemText"
                    style="@style/SettingsText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="246dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center"
                    android:lines="4"
                    android:text="@string/LoadingProblemText"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/refreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="358dp"
                    android:backgroundTint="?attr/colorError"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/RefreshText"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="14sp"
                    app:cornerRadius="54dp" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="56dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/historyTextView"
                    style="@style/SettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/youSearchedText"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="19sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:reverseLayout="true" />

                <Button
                    android:id="@+id/clearHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="?attr/colorError"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/clearHistoryButton"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="14sp"
                    app:cornerRadius="54dp" />

            </LinearLayout>

        </FrameLayout>
    </ScrollView>
</LinearLayout>